--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -1,7 +1,7 @@
 .login-wrapper{
 	display: none;
 	position: fixed;
-	top: 45vh;
+	top: 45%;
 	transform: translate( 0, -50%);
 	width: 300px;
 	height: 400px;
@@ -11,13 +11,13 @@
 }
 .login-escape-button{
 	position: absolute;
-	top: 6px;
-	right: 4px;
-	color: #ababab;
+    top: 2%;
+    right: 2%;
+    color: #b57373;
 }
 .login-escape-button:hover{
 	cursor: pointer;
-	color: #d632ff;
+	color: #c5b5b5;
 }
 .login-content{
 	display: flex;
@@ -27,13 +27,12 @@
 	top: 50%;
 	left: 50%;
 	transform: translate( -50%, -50%);
-	padding: 10px;
 }
 .login-notation-wrapper{
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-bottom: 10px;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
 }
 .login-logo-wrapper{
 	position: relative;
@@ -41,8 +40,8 @@
 	height: 80px;
 	font-size: 30px;
 	border-radius: 100px;
-	border: 2px solid #d632ff;
-	color: #d632ff;
+	border: 2px solid #ff9900;
+	color: #ff9900;
 }
 .login-logo{
 	position: absolute;
@@ -51,7 +50,7 @@
 	transform: translate( -50%, -50%);
 }
 .login-notation{
-	font-size: 30px;
+	font-size: 2em;
 }
 .login-form > input{
 	width: 250px;
