--- a/public/css/menuStyle.css
+++ b/public/css/menuStyle.css
@@ -5,7 +5,7 @@
      font-family: Arial;
 }
 body{
-	background-color: #F8E5FF;
+	background-color: #fff4e5;
 }
 .total-wrapper{
 	display: flex;
@@ -45,22 +45,25 @@ body{
 	font-weight: bold;
 	color: grey;
 	padding: 0px 10px;
-	height: 40px;
+	height: 80%;
 	text-decoration: none;
 	transition: all 0.1s ease-in-out;
 }
 .menu-list > li > a.active{
-	color: #D463E8;
-	border-bottom: 2px solid #D463E8 ; 
+	color: #ffa31a;
+	border-bottom: 2px solid #ffa31a ; 
 }
 .menu-list > li > a:hover{
-	color: #D463E8;
-	border-bottom: 2px solid #D463E8 ; 
+	color: #ffa31a;
+	border-bottom: 2px solid #ffa31a ; 
 }
 .fa{
 	margin-right: 5px;
 }
 
+.brand-icon {
+	text-align: center;
+}
 
 .right-dock{
 	display: inline-flex;
@@ -71,7 +74,7 @@ body{
 	height: 30px;
 	font-weight: bold;
 	color: #fff;
-	background-color: #D463E8;
+	background-color: #ffa31a;
 	border-radius: 20px;
 	padding: 7px 20px;
 }
@@ -81,16 +84,14 @@ body{
 }
 #open-sign-in-button{
 	display: flex;
-	align-items: center;
-	margin: 0px 0px 0px 10px;
-	background-color: #D463E8;
-	color: #ffffff;
-	border: 2px solid #D463E8;
-	border-radius: 5px;
-	padding: 2px;
-	font-size: 14px;
-	font-weight: bold;
-	padding: 3px 10px;
+    align-items: center;
+    background-color: #ffa31a;
+    color: #ffffff;
+    border-radius: 5px;
+    padding: 2px;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 3px 10px;
 }
 #open-sign-in-button > span{
 	font-size: 20px;
@@ -98,7 +99,7 @@ body{
 #open-sign-in-button:hover{
 	cursor: pointer;
 	background-color: #ffffff;
-	color: #D463E8;
+	color: #ffa31a;
 }
 .profile-setting-wrapper{
 	display: inline-flex;
@@ -159,44 +160,12 @@ body{
 	background-color: #fc20f8;
 }
 
-
-.search-notation{
-	display: none;
-	font-size: 20px;
-	cursor: pointer;
-}
-.search{
-	position: relative;
-	color: grey;
-}
-#search-input{
-	display: inline-flex;
-	padding: 8px 32px 8px 8px;
-	border-radius: 20px;
-	border: 1px solid #c5c5c5;
-}
-#search-input:focus{
-	outline: none;
-	box-shadow: 0px 0px 3px -0.5px rgba(255,0,238,1);
-}
-#search-button{
-	display: inline-flex;
-	position: absolute;
-	right: 0px;
-	top: 3px;
-	padding: 5px;
-}
-#search-button:hover{
-	display: inline-flex;
-	cursor: pointer;
-}
-
 @media screen and (max-width: 700px) {
 	.menu-option-text{
 		display: none;
 	}
 	.menu-option .fa{
-		font-size: 28px;
+		font-size: 1.7em;
 	}
 	.search{
 		display: none;
