--- a/public/css/contentStyle.css
+++ b/public/css/contentStyle.css
@@ -22,7 +22,7 @@
 	padding: 10px 10px 15px 10px;
 	box-shadow: 0px 4px 10px -4px rgba(0,0,0,0.4);
 	margin-bottom: 10px;
-	background-color: #ffffff;
+	background-color: #f9f2f2;
 }
 .portfolios-grid-item:hover{
 	cursor: pointer;
