--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -7,6 +7,7 @@
 	height: 400px;
 	background-color: rgba( 255, 255, 255, 1);
 	z-index: 0;
+	box-shadow: 0px 4px 10px -4px rgb(0, 0, 0); 
 	border-radius: 10px;
 }
 .login-escape-button{
@@ -40,8 +41,8 @@
 	height: 80px;
 	font-size: 30px;
 	border-radius: 100px;
-	border: 2px solid #ff9900;
-	color: #ff9900;
+	border: 2px solid #ffa31a;
+	color: #ffa31a;
 }
 .login-logo{
 	position: absolute;
@@ -50,22 +51,18 @@
 	transform: translate( -50%, -50%);
 }
 .login-notation{
-	font-size: 2em;
+	font-size: 1.7em;
+	color: #b2b2bb;
 }
 .login-form > input{
 	width: 250px;
-	/*background-color: rgba( 255, 147, 239, 0.3);*/
 	border-radius: 2px;
 	border: 1px solid #bababa;
 	outline: none;
 	padding: 10px;
 	margin-bottom: 10px;
 }
-.login-form > input:focus{
-	/*background-color: rgba( 255, 147, 239, 0.7);*/
-	border: 1px solid #d632ff;
-	transition: all .2s ease-in-out;
-}
+
 .login-button-wrapper{
 	display: flex;
 	flex-direction: row;
@@ -73,26 +70,13 @@
 	flex-wrap: wrap;
 	margin-top: 5px;
 }
+
 #login-submit-button{
 	flex-basis: 100px;
 }
-#goto-create-button{
-	flex-grow: 1;
-	margin-left: 10px;
-}
-.login-box-button-style{
-	background: none;
-	border: none;
-	border-radius: 2px;
-	margin-bottom: 10px;
-	padding: 7px 10px;
-	background-color: #d632ff;
-	border: 2px solid #d632ff;
-	font-weight: bold;
-	font-size: 15px;
-	color: #ffffff;
-	text-align: center;
-}
+
+
+
 .login-box-button-style:hover{
 	cursor: pointer;
 	border: 2px solid #d632ff;
@@ -100,6 +84,17 @@
 	color: #d632ff;
 }
 
-.login-facebook{
-	
+div.strikeThrough{
+	position: relative;
+    text-align: center;
+    color: #b2b2bb;
+    font-size: 12px;
+    font-style: italic;
+    font-weight: normal;
+    margin: 15px 0;
+    z-index: 1;
+}
+
+.line-through {
+	text-decoration: line-through;
 }
