--- a/views/layouts/header.handlebars
+++ b/views/layouts/header.handlebars
@@ -29,7 +29,13 @@
 				<div class="brand-icon">#LoGo</div>
 				<div class="right-dock">
 					<div id="open-sign-in-button">
-						<span class="fa fa-sign-in"></span>Sign In</div>
+						<span class="fa fa-sign-in"></span>
+						Sign in
+					</div>
+					<div id="sign-out-button">
+						<span class="fa fa-sign-out"></span>
+						Log out
+					</div>
 				</div>
 			</div>
 		</div>
