--- a/public/css/menuStyle.css
+++ b/public/css/menuStyle.css
@@ -100,12 +100,13 @@ body{
 	cursor: pointer;
 	background-color: #ffffff;
 	color: #ffa31a;
+	box-shadow: 0px 2px 9px -2px rgba(0,0,0,0.75);
 }
 #sign-out-button{
 	display: none;
     align-items: center;
-    background-color: #ffa31a;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #d4d0d0e3;
     border-radius: 5px;
     padding: 2px;
     font-size: 1em;
@@ -119,6 +120,7 @@ body{
 	cursor: pointer;
 	background-color: #ffffff;
 	color: #ffa31a;
+	box-shadow: 0px 2px 9px -2px rgba(0,0,0,0.75);	
 }
 .profile-setting-wrapper{
 	display: inline-flex;
@@ -178,6 +180,8 @@ body{
 	color: #ffffff;
 	background-color: #fc20f8;
 }
+
+
 
 @media screen and (max-width: 700px) {
 	.menu-option-text{
